RESOLVED FIXED 102442
Fix overlay scrollbar painting in compositing layers
https://bugs.webkit.org/show_bug.cgi?id=102442
Summary Fix overlay scrollbar painting in compositing layers
Simon Fraser (smfr)
Reported 2012-11-15 16:04:30 PST
Fix overlay scrollbar painting in compositing layers
Attachments
Patch (7.83 KB, patch)
2012-11-15 16:19 PST, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2012-11-15 16:19:58 PST
Simon Fraser (smfr)
Comment 2 2012-11-16 18:34:04 PST
Simon Fraser (smfr)
Comment 3 2012-11-17 17:37:12 PST
Simon Fraser (smfr)
Comment 4 2012-11-18 09:23:25 PST
Note You need to log in before you can comment on or make changes to this bug.