Source/WebCore/platform/ScrollView.cpp
@@ -57,7 +57,6 @@ ScrollView::ScrollView()
     , m_paintsEntireContents(false)
     , m_clipsRepaints(true)
     , m_delegatesScrolling(false)
-    , m_containsScrollableAreaWithOverlayScrollbars(false)
 {
     platformInit();
 }
@@ -1050,9 +1049,6 @@ void ScrollView::paint(GraphicsContext* context, const IntRect& rect)
         return;
 
     notifyPageThatContentAreaWillPaint();
-
-    // If we encounter any overlay scrollbars as we paint, this will be set to true.
-    m_containsScrollableAreaWithOverlayScrollbars = false;
 
     IntRect clipRect = frameRect();
     if (verticalScrollbar() && !verticalScrollbar()->isOverlayScrollbar())
