Source/WebCore/platform/ScrollView.h
@@ -283,9 +283,6 @@ public:
     virtual IntPoint convertFromScrollbarToContainingView(const Scrollbar*, const IntPoint&) const OVERRIDE;
     virtual IntPoint convertFromContainingViewToScrollbar(const Scrollbar*, const IntPoint&) const OVERRIDE;
 
-    bool containsScrollableAreaWithOverlayScrollbars() const { return m_containsScrollableAreaWithOverlayScrollbars; }
-    void setContainsScrollableAreaWithOverlayScrollbars(bool contains) { m_containsScrollableAreaWithOverlayScrollbars = contains; }
-
     void calculateAndPaintOverhangAreas(GraphicsContext*, const IntRect& dirtyRect);
 
 protected:
@@ -355,8 +352,6 @@ private:
     bool m_paintsEntireContents;
     bool m_clipsRepaints;
     bool m_delegatesScrolling;
-
-    bool m_containsScrollableAreaWithOverlayScrollbars;
 
     void init();
     void destroy();
